# palindrome-cpp

./: CMakeLists.txt
scrpt/: color.sh  linker.sh  listen.sh  ponyc.sh  send-data.sh  start-single-worker.sh
src/: Palindrome.cpp  Palindrome.hpp  PalindromeIO.cpp  PalindromeIO.hpp  PalindromePartition.cpp  PalindromePartition.hpp  StatefullPalindrome.cpp  StatefullPalindrome.hpp  StatelessPalindrome.cpp  StatelessPalindrome.hpp  main.cpp  main.stateless  stdinc.hpp
